Prevent zooming on mobile.

--- a/siteStyles/mainStyle.css
+++ b/siteStyles/mainStyle.css
@@ -14,6 +14,7 @@ body {
 	text-align: center;
 	border-bottom: 0.2vw solid black;
 	background-image: url("logoWithText.png");
+	background-color: #1F7592;
 	background-repeat: no-repeat;
 	background-size: auto 100%;
 	background-position: center;
